# embassy-rp2040-template

./: Cargo.toml  LICENSE  README.md  cargo-generate.toml  memory.rhai  memory.x  rust-toolchain.toml
src/: main.rs
